--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.14",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
@@ -39,5 +44,3 @@
     }
   }
 }
-
-
